--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,18 +63,24 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.orhanobut:logger:2.1.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation('com.github.VictorChow:kotlin-android-lib:1.2.2') {
         transitive = false
     }
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.2'
     debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.2'
-    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.27.0-eap13'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.27.0-eap13'
     //navigation
     implementation "android.arch.navigation:navigation-fragment:$navigation_version"
     implementation "android.arch.navigation:navigation-ui:$navigation_version"
+    //lifecycle
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    //paging
+    implementation "android.arch.paging:runtime:$paging_version"
+    //room
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
 }
 
 
