--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ ext {
     target_sdk_version = compile_sdk_version
     android_support_version = '27.1.1'
     navigation_version = '1.0.0-alpha07'
+    room_version = "1.1.1"
+    paging_version = "1.0.1"
+    lifecycle_version = "1.1.1"
 }
 
 allprojects {
