--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.orhanobut:logger:2.1.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation('com.github.VictorChow:kotlin-android-lib:1.2.2') {
         transitive = false
     }
@@ -71,6 +70,12 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.27.0-eap13'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.27.0-eap13'
+    // Retrofit
+//    implementation "com.squareup.retrofit2:retrofit:2.3.0"
+//    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
+//    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+//    implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     //navigation
     implementation "android.arch.navigation:navigation-fragment:$navigation_version"
     implementation "android.arch.navigation:navigation-ui:$navigation_version"
