--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ ext {
     room_version = "1.1.1"
     paging_version = "1.0.1"
     lifecycle_version = "1.1.1"
+    work_version = "1.0.0-beta01"
 }
 
 allprojects {
